# dlep

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/dlep-core/: Cargo.toml
crates/dlep-core/src/: codec.rs  data_item.rs  error.rs  ids.rs  lib.rs  mac.rs  message.rs  metrics.rs  signal.rs  status.rs
crates/dlep-core/tests/: codec_proptest.rs
crates/dlep-daemon/: Cargo.toml
crates/dlep-daemon/src/: cli.rs  config.rs  discovery.rs  events.rs  lib.rs  modem.rs  router.rs  runtime.rs  session.rs
crates/dlep-daemon/tests/: discovery.rs  extensions.rs  loopback.rs  tls.rs
crates/dlep-ext/: Cargo.toml
crates/dlep-ext/src/: lib.rs
crates/dlep-fsm/: Cargo.toml
crates/dlep-fsm/src/: discovery_common.rs  discovery_modem.rs  discovery_router.rs  events.rs  lib.rs  session_common.rs  session_modem.rs  session_router.rs  timers.rs  transaction.rs
crates/dlep-fsm/tests/: discovery_table.rs  session_table.rs
crates/dlep-modem/: Cargo.toml
crates/dlep-modem/src/: main.rs
crates/dlep-net/: Cargo.toml
crates/dlep-net/src/: addr.rs  discovery.rs  framed.rs  gtsm.rs  lib.rs  tls.rs  transport.rs
crates/dlep-router/: Cargo.toml
crates/dlep-router/src/: main.rs
doc/: architecture.md
