[package]
name = "dlep-daemon"
description = "DLEP (RFC 8175) daemon runtime — wires codec, state machine and transport"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dlep-core.workspace = true
dlep-fsm.workspace = true
dlep-net.workspace = true
dlep-ext.workspace = true
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true
ipnet.workspace = true
