[package]
name = "dlep-modem"
description = "DLEP (RFC 8175) modem-side daemon binary"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "dlep-modem"
path = "src/main.rs"

[dependencies]
dlep-daemon.workspace = true
dlep-ext.workspace = true
tokio.workspace = true
clap.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
