[package]
name = "dlep-net"
description = "DLEP (RFC 8175) transport: UDP multicast discovery, TCP, TLS, GTSM"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dlep-core.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
socket2.workspace = true
nix.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
rcgen = { workspace = true, optional = true }

[features]
# Exposes `tls::test_helpers` for use by integration tests in downstream
# crates. Off by default so production builds don't pull rcgen and its
# transitive deps (time, yasna, pem, …).
test-helpers = ["dep:rcgen"]

[dev-dependencies]
# Enable our own test_helpers when running this crate's tests.
rcgen.workspace = true
